# -

./: Dockerfile  README.md  README.txt  __init__.py  auth_http.py  cli.py  demo_run.py  desktop.py  docker-compose.yml  engine.py  pyproject.toml  run_core_http.py  run_http.py  start-masp.bat
api/: __init__.py  admin_hmac.py  app_database.py  deps.py  export_service.py  factory.py  health_detail.py  jwt_util.py  metrics_prom.py  middleware_security.py  policy_integrity.py  quota_manager.py  security_audit.py  tenant_registry.py  user_store.py
audit/: __init__.py  paths.py  store.py
branches/: __init__.py  access_control.py  asset_integrity.py  behavior_audit.py  business_health.py  chain_linkage.py  compliance_policy.py  data_security.py  emergency_self_heal.py  environment_trust.py  escape_abuse.py  global_threat.py  self_trust.py  traceability.py
config/: __init__.py  external_settings.py
core/: __init__.py  ai_anomaly.py  baseline.py  scan_merge.py  types.py
deploy/: README.txt  auth-identity.env.example
identity/: __init__.py  auth_paths.py  email_sender.py  oauth_providers.py  passwords.py  sms_sender.py  store.py
mcp_agent_safe_protecter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
protection/: __init__.py  context.py  engine.py  types.py
response/: __init__.py  orchestrator.py
scripts/: start-masp.ps1  start-masp.sh
shared/: __init__.py  escape_patterns.py  patterns.py  pii.py
tests/: test_api_trace.py  test_identity_store.py  test_protection.py  test_scan_merge.py  test_security_ops.py  (+2 more)
(+32 files in other folders)
